# honeybuy_tg

./: .env.example  .gitignore  PLAN.md  README.md  SCENARIOS.md  pyproject.toml
deploy/systemd/: honeybuy-tg.service
deploy/ubuntu/: env.example  install.sh
src/honeybuy_tg/: __init__.py  __main__.py  ai.py  app.py  config.py  formatting.py  metrics.py  migrations.py  models.py  parser.py  recipes.py  service.py  storage.py  telegram_bot.py
tests/: test_ai.py  test_config.py  test_deploy.py  test_formatting.py  test_metrics.py  test_parser.py  test_recipes.py  test_service.py  test_storage.py  test_telegram_bot.py
