[project]
name = "honeybuy-tg"
version = "0.1.0"
description = "Private Telegram shopping-list bot"
authors = [
    { name = "noxiouz", email = "atiurin@proton.me" }
]
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.27.0",
    "openai>=2.31.0",
    "prometheus-client>=0.25.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
honeybuy-tg = "honeybuy_tg:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]
